# neur0

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  realtime_lander.py  train_lstm.py
neur0/: __init__.py
neur0/cli/: infer.py  train.py
neur0/data/: yolo.py
neur0/losses/: __init__.py  mse.py  wmse.py
neur0/nn/: __init__.py  layers.py  lstm.py  module.py  stack.py
neur0/optim/: __init__.py  adam.py
neur0/realtime/: context.py  runner.py
neur0/rl/: reward.py
neur0/schedulers/: __init__.py  cosine.py
neur0/vision/: gym_lander.py  onnx_yolo.py
tests/: test_lstm_grad.py
